--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "node-red-electron",
+  "name": "Node-RED-Desktop",
   "version": "1.0.0",
   "description": "Node-RED on Electron",
   "main": "main/main.js",
   "scripts": {
     "build": "tsc && node build.js",
     "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc.yml src/main.ts",
+    "lint": "eslint -c .eslintrc.yml src/main/main.ts",
     "start": "electron dist/main/main.js"
   },
   "keywords": [
     "electron",
-    "typescript",
     "node-red"
   ],
   "author": "sakazuki",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/electron-builder": "^2.8.0",
+    "@types/express": "^4.16.1",
     "@types/fs-extra": "^5.0.5",
     "@types/i18n": "^0.8.5",
     "@types/semver": "^6.0.0",
@@ -34,9 +34,12 @@
     "electron-json-storage-sync": "^1.1.1",
     "electron-log": "^3.0.5",
     "electron-updater": "^4.0.6",
+    "express": "^4.16.4",
+    "express-ipfilter": "^1.0.1",
     "fs-extra": "^7.0.1",
     "i18n": "^0.8.3",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#adjust_for_electron_asar",
+    "node-red": "^0.20.5",
     "tmp": "^0.1.0"
   }
 }
