--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,11 @@
 env:
-  browser: true
+  node: true
   es6: true
 extends:
   - 'eslint:recommended'
+  - 'plugin:@typescript-eslint/recommended'
   - 'plugin:prettier/recommended'
+  - 'prettier/@typescript-eslint'
 plugins:
   - '@typescript-eslint'
 globals:
