--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/semver": "^6.0.0",
     "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "bulma": "^0.7.4",
+    "bulma-switch": "^2.0.0",
     "electron": "^5.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
