--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-desktop",
   "productName": "Node-RED-Desktop",
-  "version": "0.8.5-beta.3",
+  "version": "0.8.5",
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
@@ -26,10 +26,12 @@
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "bulma": "^0.7.4",
     "bulma-switch": "^2.0.0",
+    "commander": "^2.20.0",
     "electron": "^5.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "jquery": "^3.4.1",
     "prettier": "^1.17.0",
     "typescript": "^3.4.5"
   },
