update to build on mac

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-desktop",
   "productName": "Node-RED-Desktop",
-  "version": "0.8.7-beta.1",
+  "version": "0.8.7-beta.2",
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
@@ -41,6 +41,7 @@
     "electron-updater": "^4.0.6",
     "express": "^4.16.4",
     "express-ipfilter": "^1.0.1",
+    "file-url": "^3.0.0",
     "fs-extra": "^7.0.1",
     "i18n": "^0.8.3",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#adjust_for_electron_asar",
