--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -20,3 +20,10 @@ rules:
   indent:
     - 'error'
     - 2
+  'prettier/prettier':
+    - printWidth: 120
+  '@typescript-eslint/explicit-member-accessibility': off
+  '@typescript-eslint/explicit-function-return-type': off
+  '@typescript-eslint/no-explicit-any': off
+  '@typescript-eslint/no-non-null-assertion': off
+  '@typescript-eslint/no-unused-vars': off
