--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/file-url": "^3.0.2",
     "@types/fs-extra": "^5.0.5",
     "@types/i18n": "^0.8.5",
+    "@types/lodash": "^4.14.133",
     "@types/semver": "^6.0.0",
     "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
@@ -29,7 +30,6 @@
     "bulma-switch": "^2.0.0",
     "commander": "^2.20.0",
     "electron": "^5.0.0",
-    "electron-rebuild": "^1.8.4",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
@@ -40,12 +40,15 @@
   "dependencies": {
     "electron-json-storage-sync": "^1.1.1",
     "electron-log": "^3.0.5",
+    "electron-prompt": "^1.3.1",
+    "electron-rebuild": "^1.8.4",
     "electron-updater": "^4.0.6",
     "express": "^4.16.4",
     "express-ipfilter": "^1.0.1",
     "file-url": "^3.0.0",
     "fs-extra": "^7.0.1",
     "i18n": "^0.8.3",
+    "lodash": "^4.17.11",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#adjust_for_electron_asar",
     "node-red": "^0.20.5",
     "npm": "^6.9.0",
