--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-desktop",
   "productName": "Node-RED-Desktop",
-  "version": "0.9.0-beta.1",
+  "version": "0.9.0-beta.2",
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
@@ -17,39 +17,42 @@
   "author": "sakazuki",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/electron-builder": "^2.8.0",
-    "@types/express": "^4.16.1",
-    "@types/file-url": "^3.0.2",
-    "@types/fs-extra": "^5.0.5",
-    "@types/i18n": "^0.8.5",
-    "@types/lodash": "^4.14.133",
-    "@types/semver": "^6.0.0",
-    "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "bulma": "^0.7.4",
-    "bulma-switch": "^2.0.0",
-    "commander": "^2.20.0",
-    "electron": "^5.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "jquery": "^3.4.1",
-    "prettier": "^1.17.0",
-    "typescript": "^3.4.5"
-  },
-  "dependencies": {
     "@types/basic-auth": "^1.1.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/electron-builder": "^2.8.0",
+    "@types/express": "^4.17.0",
+    "@types/file-url": "^3.0.2",
+    "@types/fs-extra": "^7.0.0",
+    "@types/i18n": "^0.8.5",
+    "@types/lodash": "^4.14.133",
+    "@types/resolve": "0.0.8",
+    "@types/semver": "^6.0.0",
+    "@types/tmp": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "bulma": "^0.7.5",
+    "bulma-switch": "^2.0.0",
+    "commander": "^2.20.0",
+    "electron": "^5.0.2",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "jquery": "^3.4.1",
+    "npm-check-updates": "^3.1.10",
+    "prettier": "^1.17.1",
+    "typescript": "^3.5.1"
+  },
+  "dependencies": {
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "electron-json-storage-sync": "^1.1.1",
-    "electron-log": "^3.0.5",
+    "electron-log": "^3.0.6",
     "electron-prompt": "git+https://github.com/sakazuki/electron-prompt.git#pass_options",
+    "@node-red-desktop/electron-rebuild": "git+https://github.com/sakazuki/electron-rebuild.git#node-red-desktop-bundle",
     "electron-updater": "^4.0.6",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-ipfilter": "^1.0.1",
     "file-url": "^3.0.0",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.0.1",
     "i18n": "^0.8.3",
     "lodash": "^4.17.11",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#startArgs",
