--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lodash": "^4.17.11",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#startArgs",
     "node-red": "^0.20.5",
+    "node-red-nodegen": "0.0.4",
     "npm": "^6.9.0",
     "tmp": "^0.1.0"
   }
