mac: disable code signing

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -36,6 +36,7 @@ portable:
   artifactName: "${productName}_${version}_portable.${ext}"
 mac:
   category: "public.app-category.developer-tools"
+  identity: null
   target:
   - zip
   - dmg
