--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-desktop",
   "productName": "Node-RED-Desktop",
-  "version": "0.9.5-beta",
+  "version": "0.9.5-beta.2",
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
@@ -20,44 +20,44 @@
     "@types/basic-auth": "^1.1.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/electron-builder": "^2.8.0",
-    "@types/express": "^4.17.0",
+    "@types/express": "^4.17.1",
     "@types/file-url": "^3.0.2",
     "@types/fs-extra": "^8.0.0",
-    "@types/i18n": "^0.8.5",
-    "@types/lodash": "^4.14.136",
+    "@types/i18n": "^0.8.6",
+    "@types/lodash": "^4.14.141",
     "@types/resolve": "0.0.8",
-    "@types/semver": "^6.0.1",
+    "@types/semver": "^6.0.2",
     "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
     "bulma": "^0.7.5",
     "bulma-switch": "^2.0.0",
-    "commander": "^2.20.0",
-    "electron": "^6.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "commander": "^3.0.2",
+    "electron": "^6.0.10",
+    "eslint": "^6.5.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "jquery": "^3.4.1",
-    "npm-check-updates": "^3.1.20",
+    "npm-check-updates": "^3.1.23",
     "prettier": "^1.18.2",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "electron-json-storage-sync": "^1.1.1",
-    "electron-log": "^3.0.7",
+    "electron-log": "^3.0.8",
     "electron-prompt": "git+https://github.com/sakazuki/electron-prompt.git#pass_options",
     "electron-updater": "^4.1.2",
     "express": "^4.17.1",
-    "express-ipfilter": "^1.0.1",
+    "express-ipfilter": "^1.1.0",
     "file-url": "^3.0.0",
     "fs-extra": "^8.1.0",
     "i18n": "^0.8.3",
     "lodash": "^4.17.15",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#startArgs",
-    "node-red": "^0.20.7",
+    "node-red": "^1.0.0",
     "node-red-nodegen": "0.0.4",
-    "npm": "^6.10.2",
+    "npm": "^6.11.3",
     "tmp": "^0.1.0"
   }
 }
