--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bulma-switch": "^2.0.0",
     "commander": "^4.0.0",
     "electron": "^7.0.1",
+    "electron-builder": "^22.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
