--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-desktop",
   "productName": "Node-RED-Desktop",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0",
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
@@ -24,18 +24,18 @@
     "@types/file-url": "^3.0.2",
     "@types/fs-extra": "^8.0.1",
     "@types/i18n": "^0.8.6",
-    "@types/lodash": "^4.14.146",
+    "@types/lodash": "^4.14.149",
     "@types/resolve": "0.0.8",
     "@types/semver": "^6.2.0",
     "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
     "bulma": "^0.8.0",
     "bulma-switch": "^2.0.0",
-    "commander": "^4.0.0",
-    "electron": "^7.1.1",
+    "commander": "^4.0.1",
+    "electron": "^7.1.2",
     "electron-builder": "^22.1.0",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint": "^6.7.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "jquery": "^3.4.1",
     "npm-check-updates": "^3.2.1",
@@ -50,15 +50,15 @@
     "electron-prompt": "git+https://github.com/sakazuki/electron-prompt.git#pass_options",
     "electron-updater": "^4.2.0",
     "express": "^4.17.1",
-    "express-ipfilter": "^1.1.0",
+    "express-ipfilter": "^1.1.1",
     "file-url": "^3.0.0",
     "fs-extra": "^8.1.0",
     "i18n": "^0.8.4",
     "lodash": "^4.17.15",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#startArgs",
-    "node-red": "^1.0.2",
+    "node-red": "^1.0.3",
     "node-red-nodegen": "0.0.4",
-    "npm": "^6.13.0",
+    "npm": "^6.13.1",
     "tmp": "^0.1.0"
   }
 }
