--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-desktop",
   "productName": "Node-RED-Desktop",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
@@ -17,48 +17,50 @@
   "author": "sakazuki",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/basic-auth": "^1.1.2",
+    "@types/basic-auth": "^1.1.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/electron-builder": "^2.8.0",
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.7",
     "@types/file-url": "^3.0.2",
-    "@types/fs-extra": "^8.0.1",
+    "@types/fs-extra": "^9.0.1",
     "@types/i18n": "^0.8.6",
-    "@types/lodash": "^4.14.149",
-    "@types/resolve": "0.0.8",
-    "@types/semver": "^6.2.0",
-    "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.9.0",
-    "bulma": "^0.8.0",
+    "@types/lodash": "^4.14.158",
+    "@types/node": "^12.12.53",
+    "@types/resolve": "1.17.1",
+    "@types/semver": "^7.3.1",
+    "@types/tmp": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "bulma": "^0.9.0",
     "bulma-switch": "^2.0.0",
-    "commander": "^4.0.1",
-    "electron": "^7.1.2",
-    "electron-builder": "^22.1.0",
-    "eslint": "^6.7.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "jquery": "^3.4.1",
-    "npm-check-updates": "^3.2.2",
-    "prettier": "^1.19.1",
-    "typescript": "^3.7.2"
+    "commander": "^6.0.0",
+    "electron": "^9.1.1",
+    "electron-builder": "^22.8.0",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jquery": "^3.5.1",
+    "npm-check-updates": "^7.0.2",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "deepmerge": "^4.2.2",
     "electron-json-storage-sync": "^1.1.1",
-    "electron-log": "^3.0.9",
+    "electron-log": "^4.2.2",
     "electron-prompt": "git+https://github.com/sakazuki/electron-prompt.git#pass_options",
-    "electron-updater": "^4.2.0",
+    "electron-updater": "^4.3.1",
     "express": "^4.17.1",
-    "express-ipfilter": "^1.1.1",
+    "express-ipfilter": "^1.1.2",
     "file-url": "^3.0.0",
-    "fs-extra": "^8.1.0",
-    "i18n": "^0.8.4",
-    "lodash": "^4.17.15",
+    "fs-extra": "^9.0.1",
+    "i18n": "^0.10.0",
+    "lodash": "^4.17.19",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#startArgs",
-    "node-red": "^1.0.3",
-    "node-red-nodegen": "0.0.4",
-    "npm": "^6.13.1",
-    "tmp": "^0.1.0"
+    "node-red": "^1.1.2",
+    "node-red-nodegen": "0.1.0",
+    "npm": "^6.14.7",
+    "tmp": "^0.2.1"
   }
 }
