--- a/package.json
+++ b/package.json
@@ -20,47 +20,50 @@
     "@types/basic-auth": "^1.1.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/electron-builder": "^2.8.0",
-    "@types/express": "^4.17.7",
+    "@types/express": "^4.17.8",
     "@types/file-url": "^3.0.2",
     "@types/fs-extra": "^9.0.1",
-    "@types/i18n": "^0.8.6",
-    "@types/lodash": "^4.14.158",
-    "@types/node": "^12.12.53",
+    "@types/i18n": "^0.8.7",
+    "@types/lodash": "^4.14.161",
+    "@types/node": "^12.12.62",
     "@types/resolve": "1.17.1",
-    "@types/semver": "^7.3.1",
+    "@types/semver": "^7.3.4",
     "@types/tmp": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
-    "bulma": "^0.9.0",
-    "bulma-switch": "^2.0.0",
-    "commander": "^6.0.0",
-    "electron": "^9.1.1",
-    "electron-builder": "^22.8.0",
-    "eslint": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "commander": "^6.1.0",
+    "css-loader": "^4.3.0",
+    "electron": "^10.1.2",
+    "electron-builder": "^22.8.1",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jquery": "^3.5.1",
-    "npm-check-updates": "^7.0.2",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.7"
+    "npm-check-updates": "^9.0.2",
+    "prettier": "^2.1.2",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "deepmerge": "^4.2.2",
     "electron-json-storage-sync": "^1.1.1",
-    "electron-log": "^4.2.2",
+    "electron-log": "^4.2.4",
     "electron-prompt": "git+https://github.com/sakazuki/electron-prompt.git#pass_options",
-    "electron-updater": "^4.3.1",
+    "electron-updater": "^4.3.5",
     "express": "^4.17.1",
     "express-ipfilter": "^1.1.2",
     "file-url": "^3.0.0",
     "fs-extra": "^9.0.1",
-    "i18n": "^0.10.0",
-    "lodash": "^4.17.19",
+    "i18n": "^0.13.2",
+    "jquery-validation": "^1.19.2",
+    "lodash": "^4.17.20",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#startArgs",
-    "node-red": "^1.1.2",
+    "node-red": "^1.1.3",
     "node-red-nodegen": "0.1.0",
-    "npm": "^6.14.7",
+    "npm": "^6.14.8",
     "tmp": "^0.2.1"
   }
 }
