--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/i18n": "^0.13.1",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
+    "@types/request": "^2.48.7",
     "@types/resolve": "1.20.1",
     "@types/semver": "^7.3.8",
     "@types/tmp": "^0.2.1",
