--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,13 @@
-
-name: CI
+name: Build
 
 on:
   push:
-    branches:
+    tags:
     - 'v*'
 
 jobs:
   build_on_mac:
     runs-on: macos-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 14.x
@@ -21,6 +18,8 @@ jobs:
       run: npm install
     - name: build application
       run: npm run build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: create release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
@@ -36,8 +35,6 @@ jobs:
 
   build_on_win:
     runs-on: windows-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 14.x
@@ -48,6 +45,8 @@ jobs:
       run: npm install
     - name: build application
       run: npm run build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: create release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
