--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -44,3 +44,14 @@ mac:
   icon: "images/node-red-icon.icns"
   publish:
   - provider: "github"
+linux:
+  category: "Development"
+  target:
+  - rpm
+  - target: deb
+    arch:
+    - x64
+    - armv7l
+  synopsis: "Node-RED Low Code development"
+  publish:
+  - provider: "github"
