--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   ],
   "author": "sakazuki",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sakazuki/node-red-desktop.git"
+  },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/electron-builder": "^2.8.0",
     "@types/express": "^4.17.13",
     "@types/file-url": "^3.0.2",
-    "@types/fs-extra": "^9.0.12",
     "@types/i18n": "^0.13.1",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
@@ -30,10 +33,10 @@
     "@types/resolve": "1.20.1",
     "@types/semver": "^7.3.8",
     "@types/tmp": "^0.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
     "commander": "^8.1.0",
     "css-loader": "^6.2.0",
-    "electron": "^13.1.8",
+    "electron": "^13.1.9",
     "electron-builder": "^22.11.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -43,7 +46,7 @@
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
-    "webpack": "^5.49.0",
+    "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
@@ -56,7 +59,6 @@
     "electron-updater": "^4.3.9",
     "express": "^4.17.1",
     "express-ipfilter": "^1.2.0",
-    "fs-extra": "^10.0.0",
     "i18n": "^0.13.3",
     "jquery-validation": "^1.19.3",
     "lodash": "^4.17.21",
