--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
         node-version: 14.x
     - name: npm install
       run: npm install
+    - run: node build -n
+    - run: npm install
+      working-directory: ./dist
     - name: build application
       run: npm run build
       env:
