--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
         node-version: 14.x
     - name: npm install
       run: npm install
-    - name: put build.js in ./dist
-      run: node build -n
+    - name: put package.json in ./dist
+      run: node ./build.js -n
     - name: npm install in ./dist
       run: npm install
       working-directory: ./dist
@@ -48,8 +48,8 @@ jobs:
         node-version: 14.x
     - name: npm install
       run: npm install
-    - name: put build.js in ./dist
-      run: node build -n
+    - name: put package.json in ./dist
+      run: node ./build.js -n
     - name: npm install in ./dist
       run: npm install
       working-directory: ./dist
