--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/semver": "^7.3.8",
     "@types/tmp": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.0.0",
     "commander": "^8.1.0",
     "css-loader": "^6.2.0",
     "electron": "^13.1.9",
