improve build process

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
-    "build": "node build.js -s && cd ./dist && npm install && cd .. && tsc && node build.js -b",
+    "build": "tsc && node build.js",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc.yml src/main/main.ts",
     "start": "electron dist/main/main.js"
@@ -28,13 +28,13 @@
     "@types/file-url": "^3.0.2",
     "@types/i18n": "^0.13.1",
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.4.13",
+    "@types/node": "^16.4.14",
     "@types/request": "^2.48.7",
     "@types/resolve": "1.20.1",
     "@types/semver": "^7.3.8",
     "@types/tmp": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.0.0",
+    "@typescript-eslint/parser": "^4.29.1",
     "commander": "^8.1.0",
     "css-loader": "^6.2.0",
     "electron": "^13.1.9",
