--- a/package.json
+++ b/package.json
@@ -28,27 +28,27 @@
     "@types/file-url": "^3.0.2",
     "@types/i18n": "^0.13.1",
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.4.14",
+    "@types/node": "^16.7.1",
     "@types/request": "^2.48.7",
     "@types/resolve": "1.20.1",
     "@types/semver": "^7.3.8",
     "@types/tmp": "^0.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "commander": "^8.1.0",
     "css-loader": "^6.2.0",
-    "electron": "^13.1.9",
+    "electron": "^13.2.1",
     "electron-builder": "^22.11.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "npm-check-updates": "^11.8.3",
     "prettier": "^2.3.2",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
@@ -65,8 +65,10 @@
     "lodash": "^4.17.21",
     "ngrok": "git+https://github.com/sakazuki/ngrok.git#startArgs",
     "node-red": "^2.0.5",
+    "node-red-debugger": "^1.1.1",
     "node-red-nodegen": "0.1.1",
-    "npm": "^7.20.5",
+    "npm": "^7.21.0",
+    "nrlint": "^1.0.2",
     "tmp": "^0.2.1"
   }
 }
