add launch test in a github action

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "node-red-desktop",
   "productName": "Node-RED-Desktop",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Node-RED Desktop",
   "main": "main/main.js",
   "scripts": {
     "build": "tsc && node build.js",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc.yml src/main/main.ts",
-    "start": "electron dist/main/main.js"
+    "start": "electron dist/main/main.js",
+    "test": "mocha test/spec.js"
   },
   "keywords": [
     "electron",
@@ -28,22 +29,25 @@
     "@types/file-url": "^3.0.2",
     "@types/i18n": "^0.13.1",
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.7.1",
+    "@types/node": "^16.7.2",
     "@types/request": "^2.48.7",
     "@types/resolve": "1.20.1",
     "@types/semver": "^7.3.8",
     "@types/tmp": "^0.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "assert": "^2.0.0",
     "commander": "^8.1.0",
     "css-loader": "^6.2.0",
-    "electron": "^13.2.1",
+    "electron": "^13.2.2",
     "electron-builder": "^22.11.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "mocha": "^9.1.0",
     "npm-check-updates": "^11.8.3",
     "prettier": "^2.3.2",
+    "spectron": "^15.0.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
